sidetree-mock/kustomize/sidetree-mock/overlays/local/testnet/add-pvc.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stakeholder-zero
spec:
  template:
    spec:
      volumes:
      - name: sidetree-mock-config
        persistentVolumeClaim:
          claimName: sidetree-mock-config
      containers:
      - name: static-file-server
        volumeMounts:
          - mountPath: /web/.well-known
            name: sidetree-mock-config
            subPath: config
