sidetree-mock/kustomize/sidetree-mock/overlays/local/testnet/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet
spec:
  tls:
  - hosts:
      - '||BLOC_DOMAIN||'
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: '||BLOC_DOMAIN||'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stakeholder-zero
            port:
              name: http
